Added example data to database and migrated

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,12 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  database: rails_continental_data_development
+  username: asmbala
+  password: BtD
+  host: localhost
 
 development:
   <<: *default
